// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Linting should display rule documentation links when one is available 1`] = `
[
  {
    "code": "plugin/foo-bar",
    "message": "Bar (plugin/foo-bar)",
    "range": {
      "end": {
        "character": 6,
        "line": 0,
      },
      "start": {
        "character": 5,
        "line": 0,
      },
    },
    "severity": 1,
    "source": "Stylelint",
  },
  {
    "code": "color-no-invalid-hex",
    "codeDescription": {
      "href": "https://stylelint.io/user-guide/rules/color-no-invalid-hex",
    },
    "message": "Unexpected invalid hex color "#y3" (color-no-invalid-hex)",
    "range": {
      "end": {
        "character": 14,
        "line": 6,
      },
      "start": {
        "character": 11,
        "line": 6,
      },
    },
    "severity": 1,
    "source": "Stylelint",
  },
  {
    "code": "function-name-case",
    "codeDescription": {
      "href": "https://stylelint.io/user-guide/rules/function-name-case",
    },
    "message": "Expected "RGB" to be "rgb" (function-name-case)",
    "range": {
      "end": {
        "character": 12,
        "line": 2,
      },
      "start": {
        "character": 9,
        "line": 2,
      },
    },
    "severity": 1,
    "source": "Stylelint",
  },
]
`;

exports[`Linting should lint CSS documents 1`] = `
[
  {
    "code": "function-name-case",
    "codeDescription": {
      "href": "https://stylelint.io/user-guide/rules/function-name-case",
    },
    "message": "Expected "RGB" to be "rgb" (function-name-case)",
    "range": {
      "end": {
        "character": 12,
        "line": 2,
      },
      "start": {
        "character": 9,
        "line": 2,
      },
    },
    "severity": 1,
    "source": "Stylelint",
  },
]
`;
